RESOLVED FIXED153260
AX: ARIA combo boxes are not returning the right value for selected text range
https://bugs.webkit.org/show_bug.cgi?id=153260
Summary AX: ARIA combo boxes are not returning the right value for selected text range
chris fleizach
Reported 2016-01-19 17:01:52 PST
If you have an ARIA combo box it does not return the right value for selected text range because we have code to NOT do that for aria things But we should respect ARIA controls that ARE text elements. <rdar://problem/24219086>
Attachments
patch (4.34 KB, patch)
2016-01-19 17:03 PST, chris fleizach
cfleizach: review-
buildbot: commit-queue-
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (1.01 MB, application/zip)
2016-01-19 17:48 PST, Build Bot
no flags
Archive of layout-test-results from ews100 for mac-yosemite (746.55 KB, application/zip)
2016-01-19 17:53 PST, Build Bot
no flags
Archive of layout-test-results from ews117 for mac-yosemite (795.52 KB, application/zip)
2016-01-19 18:03 PST, Build Bot
no flags
patch (4.34 KB, patch)
2016-01-20 09:56 PST, chris fleizach
no flags
chris fleizach
Comment 1 2016-01-19 17:03:40 PST
Build Bot
Comment 2 2016-01-19 17:48:29 PST
Comment on attachment 269313 [details] patch Attachment 269313 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/714703 New failing tests: accessibility/textarea-insertion-point-line-number.html accessibility/textarea-selected-text-range.html
Build Bot
Comment 3 2016-01-19 17:48:33 PST
Created attachment 269316 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 4 2016-01-19 17:53:11 PST
Comment on attachment 269313 [details] patch Attachment 269313 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/714730 New failing tests: accessibility/textarea-insertion-point-line-number.html accessibility/textarea-selected-text-range.html
Build Bot
Comment 5 2016-01-19 17:53:15 PST
Created attachment 269318 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6 2016-01-19 18:03:12 PST
Comment on attachment 269313 [details] patch Attachment 269313 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/714731 New failing tests: accessibility/textarea-selected-text-range.html accessibility/textarea-insertion-point-line-number.html
Build Bot
Comment 7 2016-01-19 18:03:17 PST
Created attachment 269320 [details] Archive of layout-test-results from ews117 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-yosemite Platform: Mac OS X 10.10.5
Darin Adler
Comment 8 2016-01-19 22:43:52 PST
Comment on attachment 269313 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=269313&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1497 > + // Use the text control native range if it's a native object and it has no ARIA role (or has a text based ARIA role). > + if (isNativeTextControl() && (ariaRole != UnknownRole || isARIATextControl())) { Comment makes it sound like this should be == UnknownRole rather than != UnknownRole. Do we have test coverage for this? I think perhaps that’s why tests are failing?
chris fleizach
Comment 9 2016-01-19 23:52:12 PST
Comment on attachment 269313 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=269313&action=review >> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1497 >> + if (isNativeTextControl() && (ariaRole != UnknownRole || isARIATextControl())) { > > Comment makes it sound like this should be == UnknownRole rather than != UnknownRole. Do we have test coverage for this? I think perhaps that’s why tests are failing? yep, that's why these tests are failing. messed up the logic before uploading.
chris fleizach
Comment 10 2016-01-20 09:56:16 PST
WebKit Commit Bot
Comment 11 2016-01-22 10:12:02 PST
Comment on attachment 269355 [details] patch Clearing flags on attachment: 269355 Committed r195457: <http://trac.webkit.org/changeset/195457>
WebKit Commit Bot
Comment 12 2016-01-22 10:12:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.