AX: ARIA combo boxes are not returning the right value for selected text range https://bugs.webkit.org/show_bug.cgi?id=153260

Reviewed by Darin Adler.

Source/WebCore:

Just because an element has an ARIA role doesn't mean we should always use the selected text range of the whole document.
If the element is also a text based ARIA control, we can still use the element's inner text range to return the right value.

Test: accessibility/selected-text-range-aria-elements.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::selectedTextRange):

LayoutTests:

* accessibility/selected-text-range-aria-elements-expected.txt: Added.
* accessibility/selected-text-range-aria-elements.html: Added.


Canonical link: https://commits.webkit.org/171423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195457 268f45cc-cd09-0410-ab3c-d52691b4dbfc